# repository-factory

./: README.md  cookiecutter.json  parse.py  parsed.json  pyproject.toml  thing.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  setup-repository.yml
.github/workflows/: parse-issue.yml  setup-repository.yml  test-cookiecutter-changes.yml  test-issue-parsing-script.yml  test-issue-parsing.yml  test-issue.yml  test.yml
__tests__/integration/: test_parse.py
expected_input/: 01-choice.json
hooks/: post_gen_project.py
src/poetry_cookiecutter/: configurations.py  helpers.py
{{ cookiecutter.__package_name_kebab_case }}/: README.md
{{ cookiecutter.__package_name_kebab_case }}/.github/workflows/: test.yml
